# owa-piggy

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  add-to-path.sh  owa-piggy  owa_piggy.py  pyproject.toml  setup-cron.sh
.doc/: broker-exploration.md  plan-01-modularize-and-test.md  plan-02-security-md.md  plan-03-tests-suite.md  plan-04-ci.md  plan-05-gitignore-hygiene.md  plan-06-release-v0.1.0.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
.plans/: v1-01-secret-surface-policy.md  v1-02-agent-schema-contract.md  v1-03-permission-audit-repair.md  v1-04-launchd-state-consistency.md  v1-05-cdp-loopback-binding.md  v1-06-legacy-cdp-parity.md  v1-07-packaging-metadata.md
owa_piggy/: __init__.py  cache.py  capture.py  cdp.py  cli.py  config.py  conventions.py  doctor.py  jwt.py  launchd.py  migration.py  oauth.py  profile_tui.py  profiles.py  reseed.py  schema.py  scopes.py  scripts.py  setup.py  sharepoint.py  status.py  token_flow.py  trough.py
packaging/: entry.py  owa-piggy.spec
scripts/: add-to-path.sh  gen-completions.py  reseed-from-edge.sh  scrape_edge.py  setup-refresh.sh
scripts/completions/: README.md  _owa-piggy  owa-piggy.bash  owa-piggy.fish
tests/: conftest.py  test_cache.py  test_capture.py  test_capture_url.py  test_cdp.py  test_cli_doctor.py  test_cli_envelopes.py  test_cli_schema.py  test_cli_smoke.py  test_completions.py  test_concurrency.py  test_config.py  test_conventions.py  test_jwt.py  test_launchd.py  test_oauth.py  test_profile_ops.py  test_profile_tui.py  test_profiles.py  test_property.py  test_redaction.py  test_reseed.py  test_scopes.py  test_sharepoint.py  test_status.py  test_token_flow.py  test_trough.py  test_user_agent.py
