[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "owa-piggy"
version = "0.4.0"
description = "Get an Outlook/Graph access token without registering an app in Azure AD"
requires-python = ">=3.8"

[project.scripts]
owa-piggy = "owa_piggy:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["owa_piggy"]

# Ship the reseed helpers alongside the package so `owa-piggy --reseed` works
# in packaged installs (pipx, pip, brew). They land at
# <sys.prefix>/share/owa-piggy/scripts/ which find_reseed_script() checks.
[tool.setuptools.data-files]
"share/owa-piggy/scripts" = [
  "scripts/reseed-from-edge.sh",
  "scripts/scrape_edge.py",
]
