[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "owa-piggy"
version = "0.7.1"
description = "Get an Outlook/Graph access token without registering an app in Azure AD"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "damsleth" }]
keywords = ["outlook", "microsoft-graph", "oauth", "cli"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/damsleth/owa-piggy"
Source = "https://github.com/damsleth/owa-piggy"

[project.scripts]
owa-piggy = "owa_piggy:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["owa_piggy"]

# Ship the reseed helpers alongside the package so `owa-piggy reseed` works
# in packaged installs (pipx, pip, brew). They land at
# <sys.prefix>/share/owa-piggy/scripts/ which find_reseed_script() checks.
[tool.setuptools.data-files]
"share/owa-piggy/scripts" = [
  "scripts/reseed-from-edge.sh",
  "scripts/scrape_edge.py",
]
